# tutor-docente

./: .gitignore  CONTENT_GENERATION_GUIDE.md  DEPLOY.md  README.md  TECHNICAL_DOCUMENTATION.md  agent.py  agent_factories.py  package-lock.json  pyproject.toml  railway.json  requirements.txt
app/: main.py
app/content/trilho01/: apresentacao.md  conclusao.md  lesson_description.md  texto_abertura.md  texto_articulacao.md  texto_complementar.md  video01.md  video02.md  video03_inclusao_solidaria.md  video03_protagonismo_ativo.md
app/prompts/: __init__.py  global_policy.py  trilho01_plan.py  trilho01_steps.py
app/templates/: base.html  chat.html  index.html
core/: __init__.py  constants.py  exceptions.py
core/utils/: __init__.py  content_loader.py
domain/verbum/: __init__.py
domain/verbum/tutor_docente/: __init__.py  agent.py  constants.py  types.py
domain/verbum/tutor_docente/.adk/: session.db
domain/verbum/tutor_docente/callbacks/: __init__.py  setup_callback.py  state_callback.py
domain/verbum/tutor_docente/prompts/: __init__.py  global_policy.py  step_instructions.py  trilho01_plan.py
domain/verbum/tutor_docente/subagents/: __init__.py  content_presenter.py  feedback_generator.py  orchestrator.py  question_handler.py
domain/verbum/tutor_docente/tools/: __init__.py  content_tools.py  state_tools.py
scripts/: deploy_tutor_docente.py  generate_trilho.py  trilho01_definition.yaml
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.css  App.tsx  index.css  main.tsx
(+9 files in other folders)
